--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,22 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 body{
     text-align: center;
-    
     align-items: center;
-    
-    align-content: center;
+
+
 }
 
 .div1{
-    width: 150px;
-    height: 150px;
-    background-color: aqua;
+    width: 80%;
+    height: 300px;
+    background-color: beige;
+}
+
+.img1{
+    width: 30%;
 }
