--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 5vh 0 5vh;
 
 }
 .contenedor-secciones{
@@ -85,7 +86,7 @@ header{
     margin: 5vh;
     border-radius: 5vh;
     overflow:hidden;
-    box-shadow: 2px 2px 5vh rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 5vh rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
 
@@ -135,6 +136,7 @@ header{
     /*background-color: black;*/
     display: flex;
     flex-direction: row;
+    margin: 10vh 0 10vh;
     
 }
 .galeria{
@@ -153,12 +155,29 @@ header{
     background-color: rgb(205, 205, 205);
     margin: 5px;
     padding: 10px;
-
+    transition: transform 0.3s;
 }
-.portafolio-img-principal{
+.galeria-img:hover{
+    transform: scale(1.04);
+}
+.portafolio-informacion{
     /*background-color: blueviolet;*/
     width: 35%;
     height: 100%;
+    overflow: hidden;
+    padding: 0 0 0 5%;
+
+}
+.portafolio-texto{
+    width: 100%;
+    height: 20%;
+}
+.portafolio-imagen{
+    width: 100%;
+    height: 65%;
+}
+.portafolio-imagen img{
+    width: 100%;
 }
 
 /* FIN DE ESTILOS DE CONTENEDORES DE PORTAFOLIO */
