--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,19 @@ p{
     margin-top: 2vh;
     padding: 2vh;
 }
+b, strong{
+    font-weight: 300;
+}
 
 hr{
  margin-bottom: 2vh;
  margin-top: 2vh;
+}
+ul{
+    padding: 0 5vh;
+    text-align: left;
+    line-height: 20px;
+    list-style: square;
 }
 
 /*FIN DE ESTILOS GENERALES*/
@@ -55,26 +64,72 @@ header{
     height: 80px;
     background-color: white;
     border-bottom: 1px solid black;
-    margin-top: 5vh;
+    /*margin-top: 5vh;*/
+    position: fixed;
+    top: 0;
+    z-index: 3;
+    text-align: left;
+    padding-left: 10%;
 }
 
-/* FIN DE ESTILOS DEL HEADER*/
+/* FIN DE ESTILOS DEL HEADER */
 
+/* ESTILOS DE BANNER */
+
+.contenedor-banner{
+
+    background-image: url('../img/banner.png');
+    background-color: rgb(239, 239, 239);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    height: 500px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+.contenido-banner{
+    height: 200px;
+    width: 40%;
+    text-align: center;
+    margin: 200px 50px 50px 100px;
+    padding: 50px;
+    /* background-color: aqua; */
+}
+.contenido-banner h2{
+    font-weight: 600;
+    font-size: 2.5em;
+}
+.contenido-banner p{
+    font-size: 1.2em;
+}
+
+/* FIN ESTILOS DE BANNER */
 
 /* ESTILOS DE CONTENEDORES DE INFORMACIÓN */
 
 .contenedor-principal{
+    background-color: white;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5vh 0 5vh;
+    justify-content: center;
+    z-index: 2;
+    /* margin-top: 60vh; */
+    /*margin: 5vh 0 5vh;*/
 
 }
 .contenedor-secciones{
     display: flex;
     flex-direction:row;
     align-items: center;
-    overflow:hidden;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    /*background-color: aquamarine;*/
 
 }
 
@@ -96,24 +151,49 @@ header{
 }
 
 .img-secciones{
+    position: relative;
     width: 100%;
-    height: 40%;
-    background-color: rgb(255, 255, 255);
+    height: 50%;
     overflow: hidden;
     margin-bottom: 2vh;
 }
 
-.img-secciones-imagenes{
+.img-secciones img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.5s ease;
+    object-fit: cover;
+}
+/* .img-secciones-imagenes{
     height: 130%;
+} */
+
+.img-color{
+    opacity: 0;
 }
 
-
-.img1{
-    width: 30%;
+/* .img-secciones:hover .img-color {
+    opacity: 1;
 }
+
+.img-secciones:hover .img-bn {
+    opacity: 0;
+} */
+
+.secciones:hover .img-color {
+    opacity: 1;
+}
+
+.secciones:hover .img-bn {
+    opacity: 0;
+}
+
 
 .contenedor-informacion{
-    height: 40%;
+    height: 30%;
     width: 100%;
     overflow: auto;
 }
@@ -131,27 +211,32 @@ header{
 
 /* ESTILOS DE CONTENEDORES DE PORTAFOLIO */
 .contenedor-portafolio{
-    height: 600px;
-    width: 90%;
+    height: 70vh;
+    width: 100%;
+    background-color: white;
+    /*padding: 0 30vh;*/
     /*background-color: black;*/
     display: flex;
     flex-direction: row;
-    margin: 10vh 0 10vh;
+    justify-content: center;
+    overflow: hidden;
+    z-index: 2;
+    
     
 }
 .galeria{
     /*background-color: aqua;*/
-    width: 65%;
     height: 100%;
-    padding: 10px;
+    width: 65%;
+
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 .galeria-img{
-    width: 29.5%;
-    height: 250px;
+    width: 30vh;
+    height: 30vh;
     background-color: rgb(205, 205, 205);
     margin: 5px;
     padding: 10px;
@@ -162,7 +247,7 @@ header{
 }
 .portafolio-informacion{
     /*background-color: blueviolet;*/
-    width: 35%;
+    width: 60vh;
     height: 100%;
     overflow: hidden;
     padding: 0 0 0 5%;
@@ -173,8 +258,8 @@ header{
     height: 20%;
 }
 .portafolio-imagen{
-    width: 100%;
-    height: 65%;
+
+    height: 80vh;
 }
 .portafolio-imagen img{
     width: 100%;
