--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ h3{
 }
 
 p{
-    margin-top: 2vh;
+    margin-top: 0.5vh;
     padding: 2vh;
 }
 b, strong{
@@ -61,7 +61,7 @@ ul{
 
 header{
     width: 100%;
-    height: 80px;
+    height: 60px;
     background-color: white;
     border-bottom: 1px solid black;
     /*margin-top: 5vh;*/
@@ -71,6 +71,11 @@ header{
     text-align: left;
     padding-left: 10%;
 }
+header h1{
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 1.5em;
+   color: gray;
+}
 
 /* FIN DE ESTILOS DEL HEADER */
 
@@ -78,18 +83,19 @@ header{
 
 .contenedor-banner{
 
-    background-image: url('../img/banner.png');
+    background-image:url('../img/banner.png');
     background-color: rgb(239, 239, 239);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
     height: 500px;
     width: 100%;
     display: flex;
     align-items: center;
     padding: 10px;
 }
+
 .contenido-banner{
     height: 200px;
     width: 40%;
@@ -98,10 +104,13 @@ header{
     padding: 50px;
     /* background-color: aqua; */
 }
+
 .contenido-banner h2{
     font-weight: 600;
     font-size: 2.5em;
+    background-color: #FFE78F;
 }
+
 .contenido-banner p{
     font-size: 1.2em;
 }
@@ -120,8 +129,8 @@ header{
     z-index: 2;
     /* margin-top: 60vh; */
     /*margin: 5vh 0 5vh;*/
-
 }
+
 .contenedor-secciones{
     display: flex;
     flex-direction:row;
@@ -130,7 +139,6 @@ header{
     flex-wrap: wrap;
     width: 100%;
     /*background-color: aquamarine;*/
-
 }
 
 .secciones{
@@ -147,7 +155,6 @@ header{
 
 .secciones:hover{
     transform: scale(1.1);
-
 }
 
 .img-secciones{
@@ -211,59 +218,66 @@ header{
 
 /* ESTILOS DE CONTENEDORES DE PORTAFOLIO */
 .contenedor-portafolio{
-    height: 70vh;
+    height: auto;
     width: 100%;
     background-color: white;
-    /*padding: 0 30vh;*/
+    padding: 10vh 0;
     /*background-color: black;*/
     display: flex;
     flex-direction: row;
     justify-content: center;
     overflow: hidden;
-    z-index: 2;
-    
-    
+    z-index: 2; 
 }
 .galeria{
-    /*background-color: aqua;*/
+    /* background-color: aqua; */
     height: 100%;
-    width: 65%;
-
+    width: 75%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
 }
+
 .galeria-img{
     width: 30vh;
     height: 30vh;
     background-color: rgb(205, 205, 205);
     margin: 5px;
-    padding: 10px;
-    transition: transform 0.3s;
+    padding: 0px;
+    /* transition: transform 0.3s; */
+    overflow: hidden;
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: filter 0.5s ease ,transform 0.3s;
 }
+
+.galeria-img img{
+    display: block;     
+    width: 100%;       
+    height: 100%;     
+    object-fit: cover;
+
+}
+
 .galeria-img:hover{
-    transform: scale(1.04);
+    transform: scale(1.06);
+    filter: grayscale(0%);
 }
+
 .portafolio-informacion{
-    /*background-color: blueviolet;*/
-    width: 60vh;
+    /* background-color: blueviolet; */
+    width: 15%;
     height: 100%;
     overflow: hidden;
-    padding: 0 0 0 5%;
+    padding: 0;
+    text-align: left;
+    margin-right: 30px;
+}
+.portafolio-texto p{
+    padding:0;
+    margin: 10px 0;
+}
 
-}
-.portafolio-texto{
-    width: 100%;
-    height: 20%;
-}
-.portafolio-imagen{
-
-    height: 80vh;
-}
-.portafolio-imagen img{
-    width: 100%;
-}
 
 /* FIN DE ESTILOS DE CONTENEDORES DE PORTAFOLIO */
 
